[gd_scene load_steps=9 format=3 uid="uid://ccynisiuyn5qn"]

[ext_resource type="Script" path="res://src/interface_elements/interface.gd" id="1_16ggy"]
[ext_resource type="Script" path="res://src/interface_elements/view_box_edit.gd" id="2_osq0a"]
[ext_resource type="FontFile" uid="uid://c7ury252fql35" path="res://visual/CodeFont.ttf" id="3_8oiup"]
[ext_resource type="PackedScene" uid="uid://bp2vpf7g8w8aj" path="res://src/interface_elements/number_field.tscn" id="4_6tphi"]
[ext_resource type="Texture2D" uid="uid://dmnaqiwq4de1j" path="res://visual/icons/Circle.svg" id="5_cwjdk"]
[ext_resource type="Texture2D" uid="uid://c8t8eiojuwjje" path="res://visual/icons/Ellipse.svg" id="6_komru"]
[ext_resource type="Texture2D" uid="uid://cso2l5nvm6gm" path="res://visual/icons/Rect.svg" id="7_hdyp6"]
[ext_resource type="Texture2D" uid="uid://xpm1e34xuk06" path="res://visual/icons/Path.svg" id="8_6tgkl"]

[node name="Interface" type="VBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16
script = ExtResource("1_16ggy")

[node name="MainConfiguration" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ViewBoxEdit" type="HBoxContainer" parent="MainConfiguration"]
layout_mode = 2
script = ExtResource("2_osq0a")

[node name="Label" type="Label" parent="MainConfiguration/ViewBoxEdit"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_8oiup")
theme_override_font_sizes/font_size = 14
text = "viewBox"

[node name="WidthEdit" parent="MainConfiguration/ViewBoxEdit" instance=ExtResource("4_6tphi")]
layout_mode = 2

[node name="HeightEdit" parent="MainConfiguration/ViewBoxEdit" instance=ExtResource("4_6tphi")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Circle" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Add circle"
mouse_default_cursor_shape = 2
icon = ExtResource("5_cwjdk")
icon_alignment = 1

[node name="Ellipse" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Add ellipse"
mouse_default_cursor_shape = 2
icon = ExtResource("6_komru")

[node name="Rect" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Add rect"
mouse_default_cursor_shape = 2
icon = ExtResource("7_hdyp6")

[node name="Path" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Add path"
mouse_default_cursor_shape = 2
icon = ExtResource("8_6tgkl")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="Shapes" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="view_box_changed" from="MainConfiguration/ViewBoxEdit" to="." method="_change_view_box"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Circle" to="." method="add_circle"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Ellipse" to="." method="add_ellipse"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Rect" to="." method="add_rect"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Path" to="." method="add_path"]
